<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:text="Plato"
        android:textColor="#3F51B5"
        android:textSize="45sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:text="Nombre"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nombrePlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="Introduce nombre ..."
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:text="Categoria"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/categPlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:hint="Introduce categoria..."
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            android:entries="@array/categoria_array" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:text="Precio"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/precioPlato"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="Introduce precio ..."
            android:inputType="numberDecimal"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:text="€"
            android:textSize="20sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="Descipción"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/descPlato"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="Introduce descripcion..."
        android:inputType="textAutoComplete"
        android:scrollbars="vertical"
        android:textSize="18sp"
        android:textStyle="bold"/>



    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="Guardar plato"
        android:textColor="@color/buttonLabel" />



</LinearLayout>
